--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <h5>
                         Mauris vehicula bibendum accumsan
                     </h5>
+                    <img src="cerisier.jpg" alt="cerisier">
                     <p>
                         Vestibulum gravida blandit leo quis sollicitudin. In quis metus elit. Praesent tempor fermentum urna et dignissim.
                         Donec rhoncus nisi ac libero ultrices venenatis. 
