--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <a href="#"><i class="fa fa-github" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-google" aria-hidden="true"></i></a>
                     <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <p>Untilted. All right reserve</p>
                 </div>
             </div>
         </div>
